
(RB=259104)
Move AllProtocolVersions from com.linkedin.restli.common.internal to com.linkedin.restli.internal.common.

(RB=258733)
Fail fast when a server receives a request from a client that is encoding using a Rest.li protocol that the server does not support.

(RB=256518)
Rename X-Linkedin headers (ID and ErrorResponse) to X-RestLi headers.

1.13.5
------
(RB=257823)
Fix for getting the uri in ScatterGatherBuilder and GetAllPartitionsRequestBuilder if the legacy constructor is used.

1.13.4
------
(RB=257238)
Fix memory leaks from CopyFilter.

1.13.3
------
(RB=251559)
Add scaladoc support to Rest.li IDL generation.

(RB=256825)
Fixed a bug where if the deprecated constructor + D2 is used then getting the protocol version will fail in the RestClient as "d2://" is not a valid URI.

1.13.2
------
(RB=254542)
Refactor when projections are encoded in the URI.  Move encoding back to the normal URI encoding process.

(RB=255178)
Include schemas referenced inline when generating OPTIONS responses.

(RB=255203)
Disallow typeref as key type in annotation reader. This fixes the inconsistency between annotation reader and resource model.

(RB=251559)
Add scaladoc support to Rest.li IDL generation.

1.13.1
------
(RB=252070)
Added add markdown and markup to ZKConnectionManager

1.13.0
------
(RB=253633)
Added next protocol version. Set the latest protocol version to 1. Added a FORCE_USE_NEXT ProtocolVersionOption. Updated negotiation code.

1.12.4
------
(RB=252372)
Fix d2 rewrite bug and fix related pathKeys incorrect encoding issue.

(RB=251668)
Fix for handling invalid MIME types in accept header. Now, if a request has one or more invalid MIME types in the accept header of the request, the request is rejected with a 400. If the no supported MIME type is found in the specified accept header, a 406 is returned BEFORE the request is processed.

(RB=253327)
Fixed assertion ordering in TestRestClientRequestBuilder.

1.12.3
------
(RB=250488)